--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.6",
   "description": "Helper function to build client side A/B tests",
   "main": "src/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "types": "tsc"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "babel-loader": "^9.1.3",
+    "typescript": "^5.4.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
