--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "@funnelenvy-npm/fe-dev-utils",
   "version": "1.0.16",
   "description": "Helper function to build client side A/B tests",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: specified\" && exit 1",
-    "build": "webpack"
+    "build": "tsc && webpack",
+    "type-check": "tsc --noEmit",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +33,10 @@
   "devDependencies": {
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.26.0",
+    "@types/node": "^22.10.2",
     "babel-loader": "^9.1.3",
+    "typescript": "^5.7.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
