--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: specified\" && exit 1",
-    "build": "tsc && webpack",
+    "build": "webpack",
     "type-check": "tsc --noEmit",
     "start": "node dist/index.js"
   },
@@ -31,11 +31,9 @@
   },
   "homepage": "https://github.com/FunnelEnvy/fe-dev-utils#readme",
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "@babel/preset-typescript": "^7.26.0",
     "@types/node": "^22.10.2",
-    "babel-loader": "^9.1.3",
+    "@types/webpack": "^5.28.5",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.7.2",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
