--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: specified\" && exit 1",
-    "build": "tsc && webpack",
+    "build": "tsc",
     "type-check": "tsc --noEmit",
     "start": "node dist/index.js"
   },
