Fixing checks for waitForConditions (#27)
* Fixing checks for waitForConditions

* Fixing indentation

* Remove async

* Revert .babelrc

* 1.1.0

* Fixing version

* 1.0.18

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@funnelenvy-npm/fe-dev-utils",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "Helper function to build client side A/B tests",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: specified\" && exit 1",
-    "build": "tsc && webpack",
+    "build": "tsc",
     "type-check": "tsc --noEmit",
     "start": "node dist/index.js"
   },
